3) Please include your name with the changes you make.
4) Whenever making an update, please update this file, no matter how
small - this just lets others know that the file has changed if nothing
else.  With this, include the file(s) that you changed.
------------------------------------------------------------------------------
Changes for SVN:

Remove unused variables.
 common/image.c
 include/define.h global.h
Nicolas Weeger 2007-12-15s

Extract some code from massive move_monster().
 server/monster.c
Nicolas Weeger 2007-12-15

Remove redundant check.
 server/player.c: can_detect_enemy() calls on_same_map().
Nicolas Weeger 2007-12-15

Factorise wand charge draining code.
 include/sproto.h
 server/monster.c player.c spell_util.c
Nicolas Weeger 2007-12-15

Real path-finding algorithm for monsters. Pretty basic, but works for now.
 server/monster.c
Nicolas Weeger 2007-12-10

Fix trailing newline in i18n messing display. Convert \n to "real" newline.
 common/languages.c
Nicolas Weeger 2007-12-09

Have player's language be a variable in player instead of a key/value.
Makes things faster, no key lookup, and it's only useful for players anyway.
 common/languages.c
 include/player.h
 server/c_misc.c login.c player.c
Nicolas Weeger 2007-12-09

Factorize compound animation code.
 common/anim.c
 include/libproto.h
 server/apply.c attack.c spell_util.c
Nicolas Weeger 2007-12-09

Fix 0 destination coordinates warning for final exit of random maps.
 random_maps/exit.c
Nicolas Weeger 2007-12-02

Enable a special exit to final map in random maps, through the
 'final_exit_archetype' field.
 random_maps/exit.c random_map.c random_map.h reader.l
Nicolas Weeger 2007-12-02

Add death animation to objects, through the key 'death_animation' (which should
 be an archetype).
 server/attack.c: check for a death animation to insert.
Nicolas Weeger 2007-12-02

Fix bug #1828785: Possible false positive in the alchemy formula list.